# faws

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
faws/sqs/: __init__.py  error.py  message.py  message_storage.py  queue.py  queue_storage.py  queues.py  queues_storage.py  result.py  server.py
faws/sqs/actions/: message.py  queue.py
integrated_test/: sqs.sh
tests/sqs/: test_message.py  test_message_storage.py  test_queue.py  test_queue_storage.py  test_queues.py  test_result.py  test_server.py
tests/sqs/actions/: test_message.py  test_queue.py
