[tool.poetry]
name = "faws"
version = "0.1.0"
description = "fake aws services for python"
authors = ["takeru911 <t.maehara911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
dict2xml = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
codecov = "^2.1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
